# agent

./: .env.example  .gitignore  README.md  TASK.md  pyproject.toml  requirements.txt
src/macroeconomic_agent/: __init__.py  agent.py  analyzer.py  cli.py  config.py  models.py
src/macroeconomic_agent/data_sources/: __init__.py  alpha_vantage.py  api.py  base.py  rss.py  web_scraper.py
src/macroeconomic_agent/mcp/: __init__.py  server.py
src/macroeconomic_agent/memory/: __init__.py  storage.py
src/macroeconomic_agent/notifications/: __init__.py  email_notifier.py  notifier.py  webhook_notifier.py
tests/: __init__.py  test_alpha_vantage.py  test_analyzer.py  test_mcp_server.py  test_models.py  test_storage.py
